update background image centering

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             height: 100vh;
         }
         header {
-            background: url('https://yt3.googleusercontent.com/NX2f7OwnH3TqkoPB8mx6CnAQmMfaJGwwkCnuY8oDXzFuiirH1pkRJWESh_TYKap556nBoTSjtBQ=s900-c-k-c0x00ffffff-no-rj') no-repeat center center/cover;
+            background: url('https://yt3.googleusercontent.com/NX2f7OwnH3TqkoPB8mx6CnAQmMfaJGwwkCnuY8oDXzFuiirH1pkRJWESh_TYKap556nBoTSjtBQ=s900-c-k-c0x00ffffff-no-rj') no-repeat top center/cover;
             width: 100%;
             height: 100vh;
             display: flex;
