added apple spotify snap

--- a/index.html
+++ b/index.html
@@ -78,10 +78,13 @@
     <header>
         <h1>Country Cody</h1>
         <div class="social-links">
+            <a href="https://open.spotify.com/artist/4xve15jBIQozM8wtfmoXuZ?si=_op_bGIETZGKYlpJmAwLnA"><i class="fab fa-spotify"></i></a>
+            <a href="https://music.apple.com/us/artist/country-cody/1462334698"><i class="fab fa-apple"></i></a>
             <a href="https://www.facebook.com/CodyLeeCountryCody/"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/countrycody_/" ><i class="fab fa-instagram"></i></a>
             <a href="https://www.youtube.com/channel/UCIRd84_-oXGCtG7hrid1BVw"><i class="fab fa-youtube"></i></a>
             <a href="https://www.tiktok.com/@countrycody"><i class="fab fa-tiktok"></i></a>
+            <a href="https://www.snapchat.com/add/cody_lee1990"><i class="fab fa-snapchat"></i></a>
         </div>
     </header>
 
