--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         body {
             margin: 0;
             font-family: 'Poppins', sans-serif;
-            background-color: #f4f4f4;
+            background-color: #000000;
             color: #333;
             display: flex;
             flex-direction: column;
